--- a/tests/travis.yml
+++ b/tests/travis.yml
@@ -6,4 +6,4 @@
     macos_avatar:
       url: "https://www.gravatar.com/avatar/87a6f83874350b4f04d5731b450585f1?s=250&d=mm&r=x"
   roles:
-    - ansible-macos-avatar
+    - { role: ansible-macos-avatar }
