--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ script:
   - "ansible-playbook -i tests/inventory tests/travis.yml --syntax-check"
   - "ansible-playbook -i tests/inventory tests/travis.yml --connection=local"
   - "ansible-playbook -i tests/inventory tests/travis.yml --connection=local | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)"
+
+notifications:
+  email:
+    - feffi@feffi.org
